# MCP-Powered-Financial-Research-Analyst

./: .env.example  .gitignore  LICENSE  NEWSAPI_SETUP.md  README.md  pyproject.toml
docs/: architecture.md  data_sources.md  demo.md  evaluation.md
examples/: sample_assumptions.json  sample_memo.md  sample_run_manifest.json
scripts/: bootstrap_dev.sh  run_demo.sh
src/mcp_analyst/: __init__.py  cli.py  config.py  logging.py
src/mcp_analyst/agents/: financials.py  news_analyst.py  retriever.py  skeptic.py  synthesizer.py  valuation.py
src/mcp_analyst/evaluation/: __init__.py  consistency.py  quality.py
src/mcp_analyst/exports/: __init__.py  excel_dcf.py  excel_styles.py  memo_export.py
src/mcp_analyst/orchestrator/: __init__.py  pipeline.py  router.py  run_context.py
src/mcp_analyst/schemas/: __init__.py  factpack.py  financials.py  manifest.py  pricing.py  skeptic.py  sources.py  valuation.py
src/mcp_analyst/storage/: __init__.py  artifacts.py  hashing.py  runs.py
src/mcp_analyst/tools/: __init__.py  cache.py  edgar.py  http.py  news.py  pricing.py  transcripts.py
src/mcp_analyst/valuation/: fade.py
src/tests/: test_excel_export.py  test_excel_formatting.py  test_pipeline_smoke.py  test_pricing.py  test_schemas.py
